🔧 Remove Firebase cache files from git tracking
- Remove .firebase/hosting.ZGlzdA.cache from repository
- Improve .gitignore to prevent Firebase cache files from being tracked
- This prevents build artifacts from cluttering commit history

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,12 @@ dist-ssr
 .env
 .env.local
 .env.production
-.firebase
+
+# Firebase
+.firebase/
+*.cache
+firebase-debug.log
+firebase-debug.*.log
 
 # Editor directories and files
 .vscode/*
